--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -826,7 +826,7 @@
     }
    ],
    "source": [
-    "\"\"\"PLAT RAW DATA AND PERCENTILES\"\"\"\n",
+    "\"\"\"PLOT RAW DATA AND PERCENTILES\"\"\"\n",
     "gp = get_gridpoint(daily_mean_2m_temperature, 0, 0)\n",
     "plot_yearly_values(gp.sel(lat=0, lon=0), YEARS)\n",
     "plt.plot(range(1, percentiles.shape[0]+1), percentiles[:,0,0], 'ro-', markersize=1, linewidth=1)\n"
@@ -952,6 +952,25 @@
     "\n",
     "\n",
     "plt.plot(range(1, percentiles.shape[0]+1), percentiles[:,0,0], 'ro-', markersize=1, linewidth=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(365, 721, 1440)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.load('/home/tsternal/WeatherExtremes/daily_mean_2m_temperature_1990_1994_AGG.MEAN_aggrwindow_5_percboost_5/percentiles_0_95.npy')\n",
+    "print(a.shape)"
    ]
   },
   {
